--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@
   padding: 0;
 }
 
+@import './styles/testimonials.css';
+
 
 .App {
   text-align: center;
@@ -81,59 +83,3 @@
   justify-content: space-between;
 }
 
-/* Testimonials */
-
-.Testimonials {
-  padding-top: 2rem;
-  padding-bottom: 4rem;
-}
-
-.Testimonials-title {
-  margin: 0rem;
-  margin-bottom: 4rem;
-}
-
-.Testimonial {
-  background-color: white;
-  border-radius: 1rem;
-  min-width: 5rem;
-  max-width: 8rem;
-  padding: 1rem;
-  color: var(--dark);
-}
-
-.Testimonial-user {
-  margin: 0.5rem 0;
-  gap: auto;
-}
-
-.Testimonial-avatar {
-  min-width: 0px;
-}
-
-.Testimonial-name {
-  font-size: 1rem;
-  margin: 0;
-  
-}
-
-.Testimonial-quote {
-  position: relative;
-  margin: 0;
-  padding-top: 0.5rem;
-  text-align: start;
-  font-size: 0.75rem;
-  font-family: var(--karla);
-  font-weight: 500;
-}
-
-.Testimonial-quote::before {
-  content: '"';
-  color: var(--dark);
-  position: absolute;
-  font-size: 5rem;
-  font-family: var(--markazi);
-  top: -1.5rem;
-  left: -0.5rem;
-  opacity: 25%;
-}
