--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   padding: 0;
 }
 
+@import './styles/nav.css';
 @import './styles/testimonials.css';
 @import './styles/about.css';
 @import './styles/footer.css';
