--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
 }
 
 @import './styles/nav.css';
+@import './styles/specials.css';
+@import './styles/menu-item.css';
 @import './styles/testimonials.css';
 @import './styles/about.css';
 @import './styles/footer.css';
