added initial styles for banner

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 }
 
 @import './styles/nav.css';
+@import './styles/banner.css';
 @import './styles/specials.css';
 @import './styles/menu-item.css';
 @import './styles/testimonials.css';
