added form validation

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,31 @@
   }
 }
 
+figure {
+  object-fit: contain;
+  max-width: 50vw;
+  overflow: hidden;
+}
+
+
+
+.FormControl, .Form-element {
+  text-align: left;
+  justify-content: left;
+  width: 100%;
+  /* background-color: #495E57; */
+  margin: 2rem 0;
+
+}
+
+.Form-input-error {
+  border-color: red;
+  border-width: 4px;
+}
+.Form-label-error {
+  color: red;
+}
+
 .container {
   width: 100vw;
   min-height: 25rem;
