--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   --primary-yellow: #F4CE14;
   --secondary-orange: #EE9972;
   --secondary-peach: #FBDABB;
+  --warning: red;
   --light: #EDEFEE;
   --dark: #333333;
   --karla: 'Karla', sans-serif;
@@ -22,45 +23,6 @@
 @import './styles/about.css';
 @import './styles/footer.css';
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 figure {
   object-fit: contain;
   max-width: 50vw;
@@ -79,11 +41,11 @@ figure {
 }
 
 .Form-input-error {
-  border-color: red;
-  border-width: 4px;
+  border-color: var(--warning);
+  border-width: 2px;
 }
 .Form-label-error {
-  color: red;
+  color: var(--warning);
 }
 
 .container {
