--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,12 +2,13 @@
     background-color: var(--primary-green);
     color: var(--light);
     min-height: min-content;
-
     width: 100vw;
+}
+
+.Footer-content {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
     align-items: center;
     justify-content: space-between;
     padding: 4rem 0;
@@ -23,7 +24,6 @@
 }
 
 .Nav-logo {
-    /* max-height: 12rem; */
     width: 7.5rem;
     margin: 0 auto;
 }
