--- a/src/styles/menu-item.css
+++ b/src/styles/menu-item.css
@@ -1,7 +1,8 @@
 .MenuItem {
     font-family: var(--karla);
     flex: 1 1 200px;
-    width: 250px;
+    min-width: 250px;
+    max-width: 300px;
     border: 1px solid var(--dark);
     border-radius: 16px 16px 0 0;
     overflow: hidden;
