--- a/src/styles/specials.css
+++ b/src/styles/specials.css
@@ -1,31 +1,61 @@
-/* .Specials {
+.Specials {
+    width: 100vw;
+    min-height: 25rem;
 
-} */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    margin: 1rem auto;
+}
 
 .Specials-title {
-    margin: 0;
-    padding: 0;
-
     font-family: var(--markazi);
     font-size: 40px;
     font-weight: 400;
+
+    justify-self: flex-start;
+    justify-content: right;
 }
 
 .Specials-header > button {
     max-width: fit-content;
     padding: 0.5rem 1rem;
+    justify-self: flex-end;
 }
 
 .Specials-header {
     display: flex;
     flex-direction: row;
-    /* width: calc(100vw - 8rem); */
-    width: 80%;
+    flex-wrap: wrap;
+    width: calc(100% - 4rem);
+    max-width: var(--max-width);
     margin: 2rem 0;
     align-items: center;
     justify-content: space-between;
+    padding: 0 4rem;   
 }
 
-/* .Specials-items {
-    max-width: 100px;
-} */
+.Specials-items {
+    width: calc(100% - 4rem);
+    max-width: var(--max-width);
+    overflow-x: scroll;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    margin: 0 auto;
+
+    padding: 0 2rem;
+}
+
+@media screen and (max-width: 1055px) { 
+    .Specials-header {
+        padding: 0 2rem;
+    }
+
+    .Specials-items {
+        justify-content: left;
+    }
+}
