--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -30,7 +30,9 @@ textarea {
     
 .Booking-form {
     max-width: calc(var(--max-width)/2);
-    padding-left: 4rem;
+    /* padding-left: 6rem; */
+    margin: 0 auto;
+    margin-right: 4rem;
 }
     
 .Form-input-error {
