--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
 @import './styles/about.css';
 @import './styles/footer.css';
 @import './styles/form.css';
+@import './styles/bookings.css';
 
 figure {
   object-fit: contain;
