--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,7 +1,9 @@
 .Nav {
     width: 100vw;
     justify-content: center;
-    margin: 1rem auto;
+    margin: 0 auto;
+    padding: 1rem 0;
+    background-color: white;
 }
 
 .Nav > .Nav-contents {
