--- a/src/styles/bookings.css
+++ b/src/styles/bookings.css
@@ -1,10 +1,12 @@
 .Confirmations {
     margin: 0 auto;
     width: 100vw;
+    background-color: white;
 }
 
 .Confirmations > .title {
-    margin: 2rem auto;
+    margin: 0 auto;
+    padding: 2rem 0;
     line-height: 50px;
     text-align: center;
 }
