--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,15 +1,67 @@
 .About {
     color: var(--dark);
+    width: 100%;
+    height: fit-content;
+
 }
 
 .About-article {
-    padding-left: 4rem;
-    padding-right: 4rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     /* TODO add media query */
-    max-width: 45vw;
+    max-width: calc(var(--max-width)/2);
+    width: 100%;
+    margin: 0 auto;
 }
 
 .About-text {
     max-width: 65ch;
     font-family: var(--karla);
+    
+}
+
+.About-images {
+    max-width: calc(var(--max-width)/2);
+    position: relative;
+    display: block;
+    width: 410px;
+    min-height: 20rem;
+    margin: 0 auto;
+}
+
+.About-img:nth-child(1){
+    position: absolute;
+    bottom: 1rem;
+    left: 0rem;
+    z-index: 10;
+}
+
+.About-img:nth-child(2){
+    position: absolute;
+    top:  1rem;
+    left: 10rem;
+}
+
+@media screen and (max-width: 1055px) { 
+    .About-article {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 900px) { 
+    .About-article {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 420px) { 
+    .About-img:nth-child(1){
+        bottom: 1rem;
+        left: 1rem;
+    }
+    
+    .About-img:nth-child(2){
+        top:  0rem;
+        left: 7rem;
+    }
 }
